classDiagram
    class Owner {
        +String name
        +List~Pet~ pets
        +add_pet(pet: Pet) None
        +get_all_tasks() List~Task~
    }

    class Pet {
        +String name
        +String species
        +List~Task~ tasks
        +add_task(task: Task) None
        +get_tasks() List~Task~
    }

    class Task {
        +String description
        +String time
        +String frequency
        +bool is_completed
        +mark_complete() None
    }

    class Scheduler {
        +Owner owner
        +sort_by_time() List~Task~
        +filter_by_status(status: bool) List~Task~
        +detect_conflicts() List~Task~
    }

    Owner "1" *-- "0..*" Pet : owns
    Pet "1" *-- "0..*" Task : has
    Scheduler "1" --> "1" Owner : manages
